Fixed issue #CT-552: Answer option not showing on phone

--- a/themes/survey/fruity_twentythree/css/variations/theme_apple.css
+++ b/themes/survey/fruity_twentythree/css/variations/theme_apple.css
@@ -13421,6 +13421,11 @@ For iPads specifically : add this : (min-device-width: 768px) and (max-device-wi
     margin-left: -18px !important;
   }
 }
+@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
+  .radio-item label.ls-label-xs-visibility > * {
+    left: auto;
+  }
+}
 .radio-item label::before {
   border: 2px solid #6E748C;
   background-color: #fff;
@@ -14203,6 +14208,11 @@ table.ls-answers input[type=radio] {
   left: -10000px;
 }
 
+@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
+  .checkbox-item label.ls-label-xs-visibility > * {
+    left: auto;
+  }
+}
 /* Align privacy policy checkbox to top */
 #datasecurity_accepted {
   vertical-align: top;
