--- a/themes/survey/fruity_twentythree/css/variations/theme_mango-rtl.css
+++ b/themes/survey/fruity_twentythree/css/variations/theme_mango-rtl.css
@@ -13398,6 +13398,11 @@ For iPads specifically : add this : (min-device-width: 768px) and (max-device-wi
     margin-right: -18px !important;
   }
 }
+@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
+  .radio-item label.ls-label-xs-visibility > * {
+    right: auto;
+  }
+}
 .radio-item label::before {
   border: 2px solid #6E748C;
   background-color: #fff;
@@ -14180,6 +14185,11 @@ table.ls-answers input[type=radio] {
   right: -10000px;
 }
 
+@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
+  .checkbox-item label.ls-label-xs-visibility > * {
+    right: auto;
+  }
+}
 /* Align privacy policy checkbox to top */
 #datasecurity_accepted {
   vertical-align: top;
